Implements #2: Ability to filter based on genre

--- a/nodes/playing.html
+++ b/nodes/playing.html
@@ -11,6 +11,8 @@
         'type',
         'viewCount',
         'viewOffset',
+        'Genre.id',
+        'Genre.tag',
         'User.id',
         'User.title',
         'Player.address',
